# python-eveauth

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yaml  docs.yml  tests.yaml
examples/: basic.py
src/eveauth/: __init__.py  main.py
tests/: test_main.py
