[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python-eveauth"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "Erik Kalkoken", email = "kalkoken87@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://gitlab.com/ErikKalkoken/dhooks-lite"
Documentation = "https://dhooks-lite.readthedocs.io/en/latest/"
Source = "https://gitlab.com/ErikKalkoken/dhooks-lite"
Changelog = "https://gitlab.com/ErikKalkoken/dhooks-lite/-/blob/master/CHANGELOG.md"
Tracker = "https://gitlab.com/ErikKalkoken/dhooks-lite/-/issues"

[tool.flit.module]
name = "eveauth"

[tool.isort]
profile = "black"

[tool.pylint.'MASTER']
ignore-patterns = ["__init__.py"]
ignore-paths = ["^.*/tests/.*$"]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "ex", "id", "r"]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
# disable = ["E5142", "E1101", "W0511","R0902", "R0903", "R0913", "R0911", "R0801", "C0415"]
disable = ["R0912", "R0913"]
