[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
    { name = "Erik Kalkoken", email = "kalkoken87@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A library for authorizing desktop apps with the EVE online SSO."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "python-eveauth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests", "python-jose"]

[project.optional-dependencies]
test = [
    "requests-mock",
    "coverage"
]
docs = ["pdoc"]

[project.urls]
homepage = "https://github.com/ErikKalkoken/python-eveauth"
source = "https://github.com/ErikKalkoken/python-eveauth"
issues = "https://github.com/ErikKalkoken/python-eveauth/issues"

[tool.flit.module]
name = "eveauth"

[tool.isort]
profile = "black"
